--- a/department-service.properties
+++ b/department-service.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 management.endpoints.web.exposure.include=*
 
 eureka.instance.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
+spring.boot.dept.message = Hello, Welcome to dept service
