--- a/employee-service.properties
+++ b/employee-service.properties
@@ -10,4 +10,4 @@ management.endpoints.web.exposure.include=*
 server.port=8081
 
 eureka.instance.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
-spring.boot.dept.message = Hello, ne teamm  from emp service
+spring.boot.dept.message = Hello, new team  from emp service
