--- a/department-service.properties
+++ b/department-service.properties
@@ -7,4 +7,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 management.endpoints.web.exposure.include=*
 
 eureka.instance.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
-spring.boot.dept.message = Hello, ne teamm  from dept service
+spring.boot.dept.message = Hello, new team  from dept service
